# live-text-to-speech

./: Dockerfile  README.md  config.yaml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  uninstall.sh
src/live_tts/: __init__.py  __main__.py  app.py  config.py  grabber.py  hotkey.py  player.py  synthesizer.py  tray.py
